--- a/src/App.css
+++ b/src/App.css
@@ -38,3 +38,53 @@ p {
 	padding: 0;
 	margin: 0;
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	margin-top: 0;
+	font-weight: lighter;
+}
+
+.app {
+	display: flex;
+	flex-direction: column;
+	padding: 80px 100px 0 120px;
+}
+
+.loading {
+	font-size: 20px;
+	text-align: center;
+}
+
+.btn {
+	width: 160px;
+	padding: 15px 0;
+	font-size: 16px;
+	font-weight: bold;
+	border: none;
+	outline: none;
+	border-radius: 5px;
+	cursor: pointer;
+}
+
+.btn-edit,
+.btn-close {
+	position: absolute;
+	top: 70px;
+	right: 80px;
+}
+
+.btn-edit {
+	color: #fff;
+	background-color: mediumseagreen;
+}
+
+.btn-close {
+	color: #6d6d6d;
+	background-color: #fff;
+	border: 1px solid mediumseagreen;
+}
