--- a/src/components/Home/components/Content.css
+++ b/src/components/Home/components/Content.css
@@ -11,11 +11,17 @@
   list-style-type: none;
 }
 
+.user__item-wrapper {
+  display: flex;
+  align-items: center;
+}
+
 .user__item {
-  
+  display: flex;
+  flex-direction: column;  
   min-height: 150px;
-  padding: 15px;
-  margin-bottom: 20px;
+  padding: 5px;
+  margin: 0 20px 30px 0;
   width: 500px;
   border: 1px solid mediumseagreen;
   border-radius: 8px;
@@ -24,7 +30,7 @@
   /* box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .2), 0 4px 15px 0 rgba(0, 0, 0, .19); */
 }
 
-.user__item-name, .user__item-age, .user__item-email, .user__item-city, .user__item-occupation {
+.user__item-descr {
   display: inline-block;
   margin: 0;
   padding: 10px;
