--- a/src/components/Home/components/Menu/Menu.css
+++ b/src/components/Home/components/Menu/Menu.css
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
   background-color: mediumseagreen;
-  padding: 30px;
+  padding: 30px 30px 50px 30px;
 }
 
 .menu::before {
@@ -23,16 +23,33 @@
   background: mediumseagreen;
 }
 
+.menu__message {
+	position: absolute;
+	top: 30px;
+	left: 50%;
+	transform: translateX(-50%);
+	height: 30px;
+	width: 330px;
+	text-align: center;
+	color: #fff;
+	font-weight: bold;
+	letter-spacing: .5;
+	padding: 3px 0 3px 0; 
+	border-radius: 2px;
+	background: transparent;
+}
+
 .menu__form {
 	display: flex;
 	flex-direction: column;
   justify-content: center;
 	align-items: center;
   text-align: center;
-	height: 100%;
+  height: 100%;
+  padding-top: 60px;
 }
 
-.menu__form :nth-child(4) > input {
+.menu__form :nth-child(5) > input {
   margin-bottom: 40px;
 }
 
@@ -42,6 +59,10 @@
 	font-weight: bold;
 	color: #fff;
 }
+
+/* .menu__label:first-child {
+  color:#f9bb2d;
+} */
 
 .menu__label-text {
 	position: relative;
