--- a/src/components/Home/components/Menu/Menu.css
+++ b/src/components/Home/components/Menu/Menu.css
@@ -7,9 +7,12 @@
 	position: -webkit-sticky;
 	position: sticky;
 	top: 250px;
-  flex-direction: column;
+	display: flex;
+	flex-direction: column;
+	padding: 30px 30px 50px 30px;
+	border-radius: 5px;
   background-color: mediumseagreen;
-  padding: 30px 30px 50px 30px;
+  
 }
 
 .menu::before {
