--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,5 +1,14 @@
 .main {
-  display: flex;
-  padding: 100px 100px 0 100px;
+	display: flex;
+	padding: 100px 100px 0 100px;
+	width: 1280px;
+	margin: 0 auto;
 }
 
+/* laptop */
+
+@media (max-width: 1280px) {
+	.main {
+		width: 1100px;
+	}
+}
