--- a/src/components/Home/components/Content.css
+++ b/src/components/Home/components/Content.css
@@ -1,43 +1,54 @@
 .content {
-  position: relative;
-  display: flex;
-  width: 67%;
-  padding-left: 35px;
+	position: relative;
+	display: flex;
+	width: 55%;
 }
 
 .header {
-  margin-bottom: 40px;
-  padding-right: 70px;
+	/* min-width: 230px; */
+	margin-bottom: 40px;
+	/* padding-right: 70px; */
 }
 
 .user__list {
-  padding-top: 85px;
-  list-style-type: none;
+	list-style-type: none;
 }
 
 .user__item-wrapper {
-  display: flex;
-  align-items: center;
+	display: flex;
+	align-items: center;
 }
 
 .user__item {
-  display: flex;
-  flex-direction: column;  
-  min-height: 150px;
-  padding: 5px;
-  margin: 0 20px 30px 0;
-  width: 500px;
-  border: 1px solid mediumseagreen;
-  border-radius: 8px;
-  background-color: #fff;
-  box-shadow: 3px 3px 0px mediumseagreen;
-  /* box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .2), 0 4px 15px 0 rgba(0, 0, 0, .19); */
+	display: flex;
+	flex-direction: column;
+	min-height: 150px;
+	padding: 5px;
+	margin: 0 20px 30px 0;
+	width: 500px;
+	border: 1px solid mediumseagreen;
+	border-radius: 8px;
+	background-color: #fff;
+	box-shadow: 3px 3px 0px mediumseagreen;
+	/* box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .2), 0 4px 15px 0 rgba(0, 0, 0, .19); */
 }
 
 .user__item-descr {
-  display: inline-block;
-  margin: 0;
-  padding: 10px;
-  font-weight: 600;
-  color: #e8453c;
+	display: inline-block;
+	margin: 0;
+	padding: 10px;
+	font-weight: 600;
+	color: #e8453c;
+}
+
+/* laptop */
+
+@media (max-width: 1280px) {
+	.user__item {
+		width: 460px;
+	}
+
+	.user__item-descr {
+		font-size: 14px;
+	}
 }
