--- a/src/components/Home/components/Menu/Menu.css
+++ b/src/components/Home/components/Menu/Menu.css
@@ -1,30 +1,29 @@
 .menu__wrapper {
-  margin-top: 145px;
-  padding-left: 100px;
+	margin-top: 87px;
+	padding-left: 100px;
 }
 
 .menu {
 	position: -webkit-sticky;
 	position: sticky;
-	top: 250px;
+	top: 0px;
 	display: flex;
 	flex-direction: column;
 	padding: 30px 30px 50px 30px;
 	border-radius: 5px;
-  background-color: mediumseagreen;
-  
+	background-color: mediumseagreen;
 }
 
 .menu::before {
-  position: absolute;
-  top: -60px;
-  left: -90px;
-  margin-top: -15px;
-  display: block;
-  content: '';
-  width: 1px;
-  height: 68vh;
-  background: mediumseagreen;
+	position: absolute;
+	top: -30px;
+	left: -50px;
+	margin-top: 30px;
+	display: block;
+	content: '';
+	width: 1px;
+	height: 90vh;
+	background: mediumseagreen;
 }
 
 .menu__message {
@@ -37,8 +36,8 @@
 	text-align: center;
 	color: #fff;
 	font-weight: bold;
-	letter-spacing: .5;
-	padding: 3px 0 3px 0; 
+	letter-spacing: 0.5;
+	padding: 3px 0 3px 0;
 	border-radius: 2px;
 	background: transparent;
 }
@@ -46,15 +45,15 @@
 .menu__form {
 	display: flex;
 	flex-direction: column;
-  justify-content: center;
+	justify-content: center;
 	align-items: center;
-  text-align: center;
-  height: 100%;
-  padding-top: 60px;
+	text-align: center;
+	height: 100%;
+	padding-top: 60px;
 }
 
 .menu__form :nth-child(5) > input {
-  margin-bottom: 40px;
+	margin-bottom: 40px;
 }
 
 .menu__label {
@@ -63,10 +62,6 @@
 	font-weight: bold;
 	color: #fff;
 }
-
-/* .menu__label:first-child {
-  color:#f9bb2d;
-} */
 
 .menu__label-text {
 	position: relative;
@@ -88,7 +83,7 @@
 }
 
 .menu__input {
-	width: 330px;
+	width: 300px;
 	height: 40px;
 	margin-bottom: 20px;
 	text-align: center;
@@ -98,21 +93,46 @@
 	outline: none;
 }
 
-
 .menu__btn {
-  display: block;
-  width: 200px;
+	display: block;
+	width: 200px;
 	height: 40px;
-  padding: 10px 0;
-  font-size: 12px;
-  font-weight: bold;
-  text-transform: uppercase;
-  letter-spacing: 1.3px;
-  border-radius: 20px;
-  border: none;
-  outline: none;
-  color: #fff;
-  background-color: #f0a800;
-  box-shadow: 4px 4px 1px #fff;
-  cursor: pointer;
+	padding: 10px 0;
+	font-size: 12px;
+	font-weight: bold;
+	text-transform: uppercase;
+	letter-spacing: 1.3px;
+	border-radius: 20px;
+	border: none;
+	outline: none;
+	color: #fff;
+	background-color: #f0a800;
+	box-shadow: 4px 4px 1px #fff;
+	cursor: pointer;
+}
+
+/* laptop */
+
+@media (max-width: 1280px) {
+	.menu__wrapper {
+		margin-top: 87px;
+		padding-left: 20px;
+	}
+
+	.menu::before {
+		display: none;
+	}
+
+	.menu__label-text {
+		margin-bottom: 20px;
+	}
+
+	.menu__input {
+		width: 260px;
+		margin-bottom: 10px;
+	}
+
+	.menu__form {
+		padding-top: 45px;
+	}
 }
