added remove button

--- a/src/components/Auth/components/Sign/Sign.scss
+++ b/src/components/Auth/components/Sign/Sign.scss
@@ -7,14 +7,15 @@
 		}
 
 		& :nth-child(6) > input {
-			margin-bottom: 20px;
+			margin-bottom: 29px;
 		}
 	}
 	.auth__label-text {
-		margin-bottom: 14px;
+		margin-bottom: 18px;
 	}
 
 	.auth__input {
-		margin-bottom: 10px;
+		height: 30px;
+		margin-bottom: 16px;
 	}
 }
