done main functional

--- a/src/components/Home/components/Search/Search.scss
+++ b/src/components/Home/components/Search/Search.scss
@@ -7,7 +7,7 @@
 .search__input {
 	height: 50px;
 	width: 315px;
-	padding-left: 20px;
+	padding: 0 20px;
 	font-size: 16px;
 	border: 1.5px solid #3aa757;
 	border-radius: 25px;
