--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,10 @@
 /* colors */
 
-/* $yellow: #f9bb2d;
-$green: #3aa757;
-$blue: #4688f1;
-$red: #e8453c;
-$light_blue: #65D8F9 */
+// $yellow: #f9bb2d;
+// $green: #3aa757;
+// $blue: #4688f1;
+// $red: #e8453c;
+// $light_blue: #65D8F9;
 
 /* layout */
 
