updated .gitignore & package.json

--- a/src/components/Home/components/Menu/Menu.scss
+++ b/src/components/Home/components/Menu/Menu.scss
@@ -147,11 +147,12 @@
 	}
 
 	.menu__input {
+		height: 30px;
 		width: 260px;
 		margin-bottom: 10px;
 	}
 
 	.menu__form {
-		padding-top: 45px;
+		padding-top: 30px;
 	}
 }
